--- a/2. CSS/5. 박스모델/1. 단위/3. vw, vh.html
+++ b/2. CSS/5. 박스모델/1. 단위/3. vw, vh.html
@@ -20,7 +20,7 @@
 
         .container{  /*height는 100%, width는 50%의 비율을 먹는다. 화면 창의 크기를 줄이거나 늘려도 얘네는 고정된다. */
             width: 50vw;
-            height: 100vh;
+            height: 100vh;          /*항상 전체 화면으로(크게고정)된다는 것임*/
             background: red;
         }
 
