--- a/2. CSS/5. 박스모델/2. 박스속성/3. margin.html
+++ b/2. CSS/5. 박스모델/2. 박스속성/3. margin.html
@@ -30,7 +30,7 @@
         margin : [상하좌우]. (값이 1개 일때) > margin: 30px이면 위아래양옆이 30px이다.
         */
         
-        margin : 0 auto;    /* 상하는 0 좌우는 auto(딱 반으로 나눈다) */
+        margin : 0 auto;    /* 상하는 0 좌우는 auto(딱 좌우여백을 알아서 반으로 나눈다) */
         }
 
 
