--- a/2. CSS/9. position/3. absolute.html
+++ b/2. CSS/9. position/3. absolute.html
@@ -39,7 +39,7 @@
             bottom: 150px;  /*탑과 바텀, 왼쪽과 오른쪽 은 한꺼번에 같이 못쓴다. 하나씩 쓸 수 있다. */
 
             /*absolute쓰면 2번 박스가 밖으로 멀리 팅겨 나간다. 그리고 2번자리에 밑에 있는 3번이 치고 올라왔다. */
-            /*absolute는 부모 요소를 기준으로 움직이게 된다. 차일드의 부모는 패런트인데 포지션이 걸려있는 부모 기준으로 움직인다.
+            /*absolute는 부모 요소를 기준으로 움직이게 된다. 차일드의 부모는 패런트인데 앱솔루트는 포지션이 걸려있는 부모 기준으로 움직인다.
               근데 부모의 포지션을 준 적이 없으니 화면을 기준으로 움직인다.
               즉, 전체화면을 기준으로 움직인다. parent에 포지션 줘보자. 그럼 2번은 포지션 렐러티브를 가진 부모를 기준으로
               움직이기 때문에 rigth100, bottom150 만큼 이동한다.
