--- a/2. CSS/9. position/2. relative.html
+++ b/2. CSS/9. position/2. relative.html
@@ -16,7 +16,7 @@
         }
 
 
-        .relative{
+        .create{
             position: relative;
             left: 70px;
             top: -50px; /*마이너스를 주면 올라가겠지? 원래 아래로 내려가야 하니까*/
@@ -38,7 +38,7 @@
 <body>
     
     <div class="box">1</div>
-    <div class="box relative">2</div>
+    <div class="box create">2</div>
     <div class="box">3</div>
 
 
