--- a/2. CSS/13. flex.box/4. align-content.html
+++ b/2. CSS/13. flex.box/4. align-content.html
@@ -26,6 +26,7 @@
 
                                             flex-start는
                                             교차축의 시작점으로 들러 붙는 것을 알 수 있다.
+
                                             flex-end는 
                                             교차축의 끝점에 가서 들러 붙는다.
             
@@ -44,6 +45,9 @@
         }
 
 
+
+       /*  aling content는 전체적인 면에서 정렬 이고(요소를 한꺼번에 정렬) 
+       align.items는 한줄 한줄 따지는 것이다. */
 
 
 
